--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
-    center: [40.74, -73.99], // EDIT coordinates to re-center map
-    zoom: 12,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
+    center: [40.74, -73.99],
+    zoom: 12,
     scrollWheelZoom: true
   });
 
